--- a/lab1.html
+++ b/lab1.html
@@ -5,6 +5,6 @@
     <title>Tieu de trang web</title>
 </head>
 <body>
-    <p>Noi dung trang web</p>
+    <p>Noi dung trang web. Day la noi dung trang web</p>
 </body>
 </html>
